# luminol-maths

./: CMakeLists.txt  README.md
cmake/: CMakeLists.txt
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Demo/: CMakeLists.txt  main.cpp
src/LuminolMaths/: Matrix.hpp  Transform.hpp  Vector.hpp  VectorUtils.cpp  VectorUtils.hpp
src/LuminolMaths/Units/: Acceleration.hpp  Angle.hpp  Density.hpp  Energy.hpp  Force.hpp  Impulse.hpp  Length.hpp  Mass.hpp  Speed.hpp  Time.hpp  Unit.hpp  Velocity.hpp  Volume.hpp
test/: CMakeLists.txt  TestUtils.hpp
test/Maths/: CMakeLists.txt
test/Maths/Matrix/: CMakeLists.txt  MatrixTest.cpp  MatrixTestHelper.hpp
test/Maths/Vector/: CMakeLists.txt  VectorCrossProductTests.cpp  VectorDotProductTests.cpp  VectorLengthTests.cpp  VectorNormalizedTests.cpp  VectorTests.hpp
test/Units/: CMakeLists.txt
test/Units/Angle/: AngleConversionTests.cpp  AngleOperatorTests.cpp  AngleTests.hpp  CMakeLists.txt
